--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
   },
   "require": {
     "php": ">=5.6",
-    "phpmailer/phpmailer": "~5.2"
+    "phpmailer/phpmailer": "~5.2",
+    "twig/twig" : "~1.0"
   }
 }
