--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "GemFramework",
+  "name": "gem-framework",
   "type": "library",
-  "version": "1.0.0",
   "description": "GemFramework - php 5.6 ın gücüyle yazılan tek framework",
+  "license":"open source",
   "autoload": {
     "psr-4": {
       "Gem\\Components\\": "application/components/",
