--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "gem-framework",
+  "name": "vahitserifsaglam1/gem_framework",
   "type": "library",
   "description": "GemFramework - php 5.6 ın gücüyle yazılan tek framework",
-  "license":"open source",
+  "license":"proprietary",
   "autoload": {
     "psr-4": {
       "Gem\\Components\\": "application/components/",
