--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,14 @@
 {
   "name": "vahitserifsaglam1/gem_framework",
   "type": "library",
-  "description": "GemFramework - php 5.6 ın gücüyle yazılan tek framework",
+  "description": "GemFramework",
   "license":"proprietary",
   "autoload": {
     "psr-4": {
-      "Gem\\Components\\": "application/components/",
-      "Gem\\Modules\\": "modules/",
-      "Gem\\Application\\Manager\\": "application/managers/",
-      "Gem\\Controllers\\": "application/controllers",
-      "Gem\\Models\\": "application/models"
+      "Gem\\Components\\": "Application/Components/",
+      "Gem\\Manager\\": "Application/Manager/",
+      "Gem\\Controllers\\": "Application/Controllers/",
+      "Gem\\Models\\": "Application/Models/"
     },
     "classmap": [
       "vendor"
@@ -18,6 +17,7 @@
   "require": {
     "php": ">=5.6",
     "phpmailer/phpmailer": "~5.2",
-    "twig/twig" : "~1.0"
+    "twig/twig" : "~1.0",
+    "symfony/yaml":"dev-master"
   }
 }
