new routing system
new routing system

--- a/application/Database/user.yaml
+++ b/application/Database/user.yaml
@@ -2,6 +2,11 @@ table: user
 login:
     - username
     - password
+register:
+    - username
+    - password
+    - email
+    - name
 access:
     - role
 column:
