--- a/application/Configs/general.yaml
+++ b/application/Configs/general.yaml
@@ -2,5 +2,7 @@ alias:
     Auth: Gem\Components\Auth
     Cookie: Gem\Components\Cookie
     Event: Gem\Components\Event
+    Route: Gem\Components\Route\RouteCollector
 providers:
+    - Gem\Manager\Providers\Route
     - Gem\Manager\Providers\Event
