--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,22 @@
 language: php
+
 php:
-  - 7.0
-  - 5.6
-  - 5.5
-  - 5.4
-  - 5.3
-  - hhvm
- 
+    - 5.4
+    - 5.5
+    - 5.6
+    - hhvm
+
+matrix:
+    allow_failures:
+        - php: hhvm
+
+before_script:
+    - curl -s http://getcomposer.org/installer | php
+    - php composer.phar install
+
+after_script:
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+
+script:
+    vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
