--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,4 @@ matrix:
         - php: hhvm
 
 before_script:
-    - curl -s http://getcomposer.org/installer | php
-    - php composer.phar install
-
-after_script:
-    - wget https://scrutinizer-ci.com/ocular.phar
-    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
-
-script:
-    vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+    -curl -sS https://getcomposer.org/installer | php
