--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "php": ">=5.4",
     "phpmailer/phpmailer": "~5.2",
     "twig/twig" : "~1.0",
-	"particle/validator":"dev-master"
+    "particle/validator": "dev-master",
+    "symfony/finder": "2.7.*"
   }
 }
