phinx migration system deleted

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,6 @@
     "symfony/finder": "2.7.*",
     "symfony/console": "2.7.*",
     "symfony/process": "2.7.*",
-    "symfony/event-dispatcher": "2.7.*",
-    "robmorgan/phinx": "0.4.4"
+    "symfony/event-dispatcher": "2.7.*"
   }
 }
